--- a/content/projects/cost-optimization.mdx
+++ b/content/projects/cost-optimization.mdx
@@ -39,6 +39,8 @@ diagram: '/diagrams/cost-optimization.svg'
 thumbnail: '/images/projects/cost-optimization.png'
 ---
 
+<TOC />
+
 # The Challenge
 
 My client's AWS EKS infrastructure was running 10-15 ephemeral environments for pull request testing, each staying up 24/7 despite zero traffic during non-business hours. This resulted in significant costs with 50% idle capacity during off-peak hours and weekends.
@@ -163,4 +165,4 @@ After successful validation:
 
 ---
 
-**Next Project:** [ML Inference Platform →](/projects/ml-platform)
+**Next Project:** [ML Inference Platform for Financial Services →](/projects/ml-platform)
