--- a/content/projects/ml-platform.mdx
+++ b/content/projects/ml-platform.mdx
@@ -45,6 +45,8 @@ thumbnail: '/images/projects/ml-platform.png'
 thumbnailPosition: 'top'
 ---
 
+<TOC />
+
 # The Challenge
 
 A large LATAM financial institution that I had as a client once required real-time ML inference for **fraud detection and credit risk analysis** during transaction processing. The business constraint was critical:
@@ -220,4 +222,4 @@ Latency (ms)
 
 ---
 
-**Next Project:** [Kubernetes Cost Optimization →](/projects/cost-optimization)
+**Next Project:** [Building a Production-Grade OpenTelemetry Stack →](/projects/observability)
