Add production-kubernetes-2-observability-stacks blog post

--- a/content/blog/production-kubernetes-1-observability-foundations.mdx
+++ b/content/blog/production-kubernetes-1-observability-foundations.mdx
@@ -488,3 +488,11 @@ When designing or evolving observability:
 Observability is not a static implementation.
 
 It is an evolving capability that matures alongside the system.
+
+---
+
+## Related Posts
+
+Production-ready Kubernetes Series:
+- [Part 1 - Observability Foundations](https://andrewlod.com/blog/production-kubernetes-1-observability-foundations)
+- [Part 2 - Observability Stacks](https://andrewlod.com/blog/production-kubernetes-2-observability-stacks)
