Add production-kubernetes-3-availability-graceful-termination post

--- a/content/blog/production-kubernetes-1-observability-foundations.mdx
+++ b/content/blog/production-kubernetes-1-observability-foundations.mdx
@@ -496,3 +496,4 @@ It is an evolving capability that matures alongside the system.
 Production-ready Kubernetes Series:
 - [Part 1 - Observability Foundations](https://andrewlod.com/blog/production-kubernetes-1-observability-foundations)
 - [Part 2 - Observability Stacks](https://andrewlod.com/blog/production-kubernetes-2-observability-stacks)
+- [Part 3 - Availability - Graceful Termination](https://andrewlod.com/blog/production-kubernetes-3-availability-graceful-termination)
