--- a/content/blog/production-kubernetes-2-observability-stacks.mdx
+++ b/content/blog/production-kubernetes-2-observability-stacks.mdx
@@ -464,3 +464,4 @@ Your stack should serve that goal — not become another source of noise.
 Production-ready Kubernetes Series:
 - [Part 1 - Observability Foundations](https://andrewlod.com/blog/production-kubernetes-1-observability-foundations)
 - [Part 2 - Observability Stacks](https://andrewlod.com/blog/production-kubernetes-2-observability-stacks)
+- [Part 3 - Availability - Graceful Termination](https://andrewlod.com/blog/production-kubernetes-3-availability-graceful-termination)
